# finetune-controller

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.monitor  README.md  example.config.json  pyproject.toml
.github/workflows/: test.yml
app/: main.py  monitor_main.py
app/api/: custom_openapi.py  middleware.py
app/core/: config.py  device_config.py  monitor.py  security.py
app/database/: db.py
app/jobs/: monitor.py  registered_models.py  task_builder.py
app/jobs/kubeflow/: PyTorchJobDeployer.py
app/models/: model_loader.py
app/models/base/: finetuning.py
app/models/examples/: mnist.py
app/schemas/: db_schemas.py  jobs_schemas.py  kubeflow_schemas.py
app/tasks/: promotion.py
app/utils/: S3Handler.py  dataset_helpers.py  kf_config.py  kube_config.py  kube_helpers.py  kueue_helpers.py  logging_config.py  naming.py  stream_logger.py
crds/kueue/: cluster-queue.yaml  default-user-queue.yaml  gpu-flavor.yaml
docs/: setup_models.md
examples/Kueue/: Kueue.md
examples/Kueue/crds/: cluster-flavors.yaml  cluster-queue-mixed.yaml  default-user-queue.yaml
scripts/: cluster_install.sh  publish_git.sh  publish_local.sh  serve_app.sh  serve_monitor.sh
tests/: test_introspection.py  test_security.py
